update typo in cs.po
Signed-off-by: Mirakels <mirakels@users.sourceforge.net>

--- a/po/cs.po
+++ b/po/cs.po
@@ -7926,7 +7926,7 @@ msgstr "volného místa"
 
 #
 msgid "free diskspace"
-msgstr "volného místavolného místa"
+msgstr "volného místa"
 
 #
 msgid "full transparency"
